[tool.poetry]
name = "hello-plotly-dash"
version = "0.1.0"
description = ""
authors = ["hnishi <nishigami2509@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dash = "1.19.0"
dash-auth = "1.3.2"
requests = "^2.25.1"
pandas = "^1.2.3"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
